--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,6 +72,8 @@ textarea {
   transition: all 0.3s ease-in-out;
 }
 
+/*** OVERWRITE - MEDIA QUERY FOR TABLETS AND SMALLER  ***/
+/* This will be applied on any screen 768px and bellow */
 @media screen and (max-width: 768px), screen and (max-width: 575px) {
   .row {
     height: auto;
